added jdk9 option to integration tests too